优化 docsearch 文章内容样式

--- a/blog/2023/4/19/index.mdx
+++ b/blog/2023/4/19/index.mdx
@@ -74,7 +74,7 @@ Algolia 是一个搜索、推荐服务平台，可以通过简单的配置来为
 <br />
 <br />
 
-### 2. 获取 *Application* ID & *API Keys*
+### 2. 获取 *Application ID* & *API Keys*
 
 前往 [Algolia 官网](https://www.algolia.com/), 登录账户 创建 *Application*
 
