--- a/docs/server/caddy/base.mdx
+++ b/docs/server/caddy/base.mdx
@@ -7,6 +7,9 @@ title: Caddy 基本配置
 
 Caddy 的配置文件 `Caddyfile` 位置: `/etc/caddy/Caddyfile`
 
+使用命令 让 caddy 后台运行
+caddy run --config Caddyfile
+
 ### 参考文章:
 
 [Caddy V2 Caddyfile 配置](https://itlaws.cn/post/caddy-v2-caddyfile/)
