修改 Traefik配置; 优化首页介绍

--- a/docs/server/nginx/base.mdx
+++ b/docs/server/nginx/base.mdx
@@ -6,6 +6,8 @@ title: Nginx 基本配置
 ---
 
 > [Nginx 官方文档](https://docs.nginx.com/nginx/admin-guide/web-server/web-server/)
+>
+> [Nginx 入门教程](https://xuexb.github.io/learn-nginx/)
 
 ## 常用命令
 ```bash
