新增文档内容

--- a/docs/javascript/versions/es-2023.mdx
+++ b/docs/javascript/versions/es-2023.mdx
@@ -409,3 +409,4 @@ console.log("JavaScript");
 ## 参考链接
 
 * [ECMAScript 2023 有哪些更新?](https://mp.weixin.qq.com/s/zLH9WzojTvtCo5xNjEdH9Q)
+* [ECMAScript 2023 有哪些新东西?](https://mp.weixin.qq.com/s/5TmiUeThLpVIxNG5rUsdbQ)
