--- a/docs/react/react-library.mdx
+++ b/docs/react/react-library.mdx
@@ -40,6 +40,7 @@ last_update:
 * G2Plot 基于 G2 封装的开箱即用的可视化组件库
 * recharts 使用 React 和 D3 构建的自定义的图表库
 * Viser 支持多种主流框架的可视化库
+* react-gantt-antd 一个漂亮的 React甘特图组件, antd风格
 
 ## 拖拽/排序
 * react-beautiful-dnd 漂亮,可移植性 列表拖拽库
