--- a/docs/server/caddy/base.mdx
+++ b/docs/server/caddy/base.mdx
@@ -13,3 +13,4 @@ caddy run --config Caddyfile
 ### 参考文章:
 
 [Caddy V2 Caddyfile 配置](https://itlaws.cn/post/caddy-v2-caddyfile/)
+[使用 Caddy 替代 Nginx, 全站升级 https, 配置更加简单](https://diamondfsd.com/caddy-instand-nginx-support-https/)
