新增文档; 添加备案信息

--- a/blog/2023/4/10/introduction-to-the-various-sects-of-chinese-buddhism.mdx
+++ b/blog/2023/4/10/introduction-to-the-various-sects-of-chinese-buddhism.mdx
@@ -15,9 +15,9 @@ description: 中国佛教的各个宗派
 
 佛教自从东汉明帝时期传入我国之后，很快就受到了统治阶层和平民阶层的双重欢迎，得到了飞速发展
 
-而在最鼎盛的隋唐时期，一共有多达十个宗派，分别是
+而在最鼎盛的隋唐时期，一共有多达十个宗派，分别是:
 
-大乘八宗——“禅宗、天台宗、华严宗、密宗、法相宗、律宗、三论宗、净土宗”以及小乘二宗——“俱舍宗、成实宗”
+大乘八宗——“禅宗、天台宗、华严宗、密宗、法相宗、律宗、三论宗、净土宗” 以及 小乘二宗—— “俱舍宗、成实宗”
 
 <!--truncate-->
 
@@ -37,9 +37,9 @@ description: 中国佛教的各个宗派
 | [华严宗](https://zh.wikipedia.org/wiki/%E5%8D%8E%E4%B8%A5%E5%AE%97) | [法藏法师](https://zh.wikipedia.org/wiki/%E6%B3%95%E8%97%8F)、[杜顺法师](https://zh.wikipedia.org/wiki/%E5%B8%9D%E5%BF%83%E6%9D%9C%E9%A0%86)、[云华智俨法师](https://zh.wikipedia.org/wiki/%E6%99%BA%E4%BF%A8) | [《华严经》](https://zh.wikipedia.org/wiki/%E8%8F%AF%E5%9A%B4%E7%B6%93) | [长安华严寺](https://zh.wikipedia.org/wiki/%E5%8D%8E%E4%B8%A5%E5%AF%BA%E5%A1%94_(%E8%A5%BF%E5%AE%89))、 [高丽寺](https://zh.wikipedia.org/wiki/%E9%AB%98%E4%B8%BD%E5%AF%BA) | 唐朝 | 贤首宗、法界宗 |
 | [密宗](https://zh.wikipedia.org/wiki/%E5%94%90%E5%AF%86) | [善无畏](https://zh.wikipedia.org/wiki/%E5%96%84%E7%84%A1%E7%95%8F)、[金刚智](https://zh.wikipedia.org/wiki/%E9%87%91%E5%89%9B%E6%99%BA)、[不空](https://zh.wikipedia.org/wiki/%E4%B8%8D%E7%A9%BA) | [《大日经》](https://zh.wikipedia.org/wiki/%E5%A4%A7%E6%97%A5%E7%B6%93)、[《金刚顶经》](https://zh.wikipedia.org/wiki/%E9%87%91%E5%89%9B%E9%A0%82%E7%B6%93) | [长安大兴善寺](https://zh.wikipedia.org/wiki/%E5%A4%A7%E5%85%B4%E5%96%84%E5%AF%BA) | 唐朝 | 真言陀罗尼宗、真言宗、金刚顶宗、大日宗、毗卢遮那宗、开元宗 |
 
-天台宗 与 禅宗、 华严宗 都是由中国本土佛教论师在中国开创，被认为最具中国特色的三大佛教宗派
+**天台宗** 与 **禅宗、** **华严宗** 都是由中国本土佛教论师在中国开创，被认为最具中国特色的 **三大佛教宗派**
 
-净土宗 与 禅宗 是对中国汉传佛教后期影响最大的两个支派
+**净土宗** 与 **禅宗** 是对中国汉传佛教后期影响最大的两个支派
 
 <br />
 <br />
@@ -49,7 +49,7 @@ description: 中国佛教的各个宗派
 
 | 宗派 | 代表人 | 依据 | 国内发源地 | 形成时间 | 别称 |
 | --- | --- | --- | --- | --- | --- |
-| [俱舍宗](https://zh.wikipedia.org/wiki/%E4%BF%B1%E8%88%8D%E5%AE%97) | [世亲菩萨](https://zh.wikipedia.org/wiki/%E4%B8%96%E4%BA%B2), [真谛](https://zh.wikipedia.org/wiki/%E7%9C%9F%E8%AB%A6), [玄奘](https://zh.wikipedia.org/wiki/%E7%8E%84%E5%A5%98) | [俱舍论](https://zh.wikipedia.org/wiki/%E9%98%BF%E6%AF%97%E8%BE%BE%E7%A3%A8%E4%BF%B1%E8%88%8D%E8%AE%BA) | [广州制旨寺](http://buddhaspace.org/dict/fk/data/%25E5%2588%25B6%25E6%2597%25A8%25E5%25AF%25BA.html) | 南朝陈国 | 小乘有宗, 毗昙宗 |
+| [俱舍宗](https://zh.wikipedia.org/wiki/%E4%BF%B1%E8%88%8D%E5%AE%97) | [世亲菩萨](https://zh.wikipedia.org/wiki/%E4%B8%96%E4%BA%B2), [真谛](https://zh.wikipedia.org/wiki/%E7%9C%9F%E8%AB%A6), [玄奘](https://zh.wikipedia.org/wiki/%E7%8E%84%E5%A5%98) | [《俱舍论》](https://zh.wikipedia.org/wiki/%E9%98%BF%E6%AF%97%E8%BE%BE%E7%A3%A8%E4%BF%B1%E8%88%8D%E8%AE%BA) | [广州制旨寺](http://buddhaspace.org/dict/fk/data/%25E5%2588%25B6%25E6%2597%25A8%25E5%25AF%25BA.html) | 南朝陈国 | 小乘有宗, 毗昙宗 |
 | [成实宗](https://zh.wikipedia.org/wiki/%E6%88%90%E5%AF%A6%E5%AE%97) | [鸠摩罗什](https://zh.wikipedia.org/zh-hans/%E9%B8%A0%E6%91%A9%E7%BD%97%E4%BB%80) | [《成实论》](https://zh.wikipedia.org/zh-hans/%E6%88%90%E5%AF%A6%E8%AB%96) | 长安 | 东晋十六国 | 小乘空宗 |
 
 <br />
