--- a/docs/plugins-and-libraries/node-library.mdx
+++ b/docs/plugins-and-libraries/node-library.mdx
@@ -5,6 +5,11 @@ description: Node 配套库
 title: Node 配套库
 ---
 
+![](./img/node-system.jpg)
+
+<br />
+<br />
+
 ## Lodash
 Lodash 是一个 JavaScript 实用程序库，它提供了一组用于处理数组、对象、字符串和其他数据类型的函数
 
@@ -197,7 +202,20 @@ fs-extra让Node.js文件操作文件更人性化, fs-extra提供以同步方式 
 
 <br />
 
+## Node.js Toolbox
+
+当我们在做 Node.js 的一些技术选型时，会有一些这样的考虑 🤔️
+
+例如: 日志模块都有哪些、全栈型的框架有哪些、ORM 都有哪些等等
+
+**[Node.js Toolbox](https://nodejstoolbox.com/)**, 可以快速的帮我们查找在 Node.js 生态系统中有哪些积极维护且流行的库，并已经做好了分类
+
+<br />
+
 ## 参考链接
 
 * [10大 Node.js 库可以帮助你优化代码和简化开发](https://mp.weixin.qq.com/s/QENs40MwDo7rV0hyhlHzbg)
 * [令人极度舒适的 Node.js 包和资源列表](https://zhuanlan.zhihu.com/p/385852664)
+* [2023 年的 Node.js 生态系统](https://mp.weixin.qq.com/s/D2GAltuKVInCbyUutgAl3w)
+
+<br />
