--- a/docs/plugins-and-libraries/base.mdx
+++ b/docs/plugins-and-libraries/base.mdx
@@ -14,16 +14,7 @@ title: 优秀、无依赖的插件和库
 * big.js  一个小型，快速的 JavaScript 库，用于任意精度的十进制算术运算
 * qs  一个 url 参数转化 (parse 和 stringify)的轻量级 js 库
 * decimal.js  实现 JavaScript 的任意精度的十进制类型库
-
-<br />
-
-## 功能插件
-
-### swipe - 图片滑动切换效果库
-
-> 非常轻量级的一个图片滑动切换效果库, 性能良好, 尤其是对手机的支持, 压缩后的大小约 5kb
-
-  * [github](https://github.com/lyfeyaj/Swipe)
+* driver.js  JS引导插件, 创建页面导览、亮点和上下文帮助 — 一个无依赖的JavaScript 库
 
 <br />
 
@@ -63,6 +54,7 @@ title: 优秀、无依赖的插件和库
 * fullPage.js  一个可轻易创建全屏滚动网站的 js 滚动动画库, 兼容性无可替代
 * iscroll  移动端使用的一款轻量级滚动插件
 * swiper.js  一款强大的 js 跨端触摸滑动插件
+* swipe - 图片滑动切换效果库, 非常轻量级的一个图片滑动切换效果库, 性能良好, 尤其是对手机的支持, 压缩后的大小约 5kb
 * MixItUp  是用于 DOM 操作的高性能，无依赖库，使您能够使用精美的动画过滤，排序，添加和删除 DOM 元素的 js 动画库
 * Lottie  一个用于 Android, ios, Web 和 Windows 的库，用于解析使用 Bodymovin 导出为 json 的 Adobe After Effects 动画，并在移动设备和网络上呈现它们
 
