更新博客图片; 插件库的内容更新

--- a/docs/plugins-and-libraries/base.mdx
+++ b/docs/plugins-and-libraries/base.mdx
@@ -88,9 +88,20 @@ title: 优秀、无依赖的插件和库
 * kite 一个兼容性极好且灵活的布局 css 库
 * csshake 一个能够震动和晃动DOM元素的 CSSku 库
 * hint.css 一个用纯 css 和 html 实现的提示库
+* CSS Loaders 一个庞大的集合，包含 30 多个类别下的 600 多个 CSS 加载动画
+* Ribbon Shapes 一个纯 CSS 丝带的在线画廊，几乎具有可以想象到的任何丝带格式
 
 <br />
 
+## 图标库
+* freeicons 一个包含 22000 多个图标的通用名称集，其中包括品牌图标和通用图标
+* Iconhunt 一个图标搜索引擎，可让我们访问 170000 多个免费开源图标
+<br />
+
+## 日期选择器
+* Flatpickr.js  一个轻量级的, 功能丰富的, 易于使用, 兼容 IE9+ 的日期选择器
+* Calendar.js 一个日期选择器和日历库，该解决方案是轻量级的，且没有依赖性
+<br />
 
 ## 优秀国产项目集合
 
@@ -113,3 +124,4 @@ title: 优秀、无依赖的插件和库
 
 * [工作中经常用到github上优秀、实用、轻量级、无依赖的插件和库](https://github.com/jawil/blog/issues/10)
 * [总结100+前端优质库,让你成为前端百事通](https://mp.weixin.qq.com/s?__biz=MzU2Mzk1NzkwOA==&mid=2247492204&idx=1&sn=8a77569e6ba32eff5cd7cb8bae7e0771&chksm=fc50fb97cb277281891f1620dc5ab3a05ba687a04dbe6f224479a36c8f7567b1aebf75e67709&scene=178&cur_album_id=1972186128682221573#rd)
+* [2023 顶级前端工具](https://mp.weixin.qq.com/s/8YRQNy65kVyOhw5tHvooJQ)
