--- a/docs/plugins-and-libraries/node-library.mdx
+++ b/docs/plugins-and-libraries/node-library.mdx
@@ -30,8 +30,8 @@ console.log(filteredData); // Output: [2, 4]
 
 <br />
 
-## Node-cache
-Node-cache 是一个缓存库，使开发人员能够在 Node.js 应用程序中缓存数据
+## node-cache
+node-cache 是一个缓存库，使开发人员能够在 Node.js 应用程序中缓存数据
 
 缓存有助于减少数据库查询和 API 调用的次数，从而提高应用程序性能
 
