--- a/docs/react/react-library.mdx
+++ b/docs/react/react-library.mdx
@@ -24,16 +24,26 @@ last_update:
 * Dva 一个基于 redux 和 redux-saga 的数据流方案
 
 ## 工具库
-* React Virtualized 一个能渲染大型列表和表格的 React 解决方案
+* react Virtualized 一个能渲染大型列表和表格的 React解决方案
 * react-file-viewer React 在线 PDF 预览插件
-* react-copy-to-clipboard 基于 React 的复制到剪切板组件
+* react-copy-to-clipboard 基于 React的复制到剪切板组件
 * qrcode.react 基于 React 的生成二维码的组件
-* nprogress 适用于 YouTube, Medium 等的顶部进度条组件
-* react-syntax-highlighter 基于 React 的代码高亮组件
+* react-nprogress 适用于 YouTube, Medium等的顶部进度条组件
+* react-syntax-highlighter 基于 React的代码高亮组件
 * react-contextmenu 右键菜单组件
-* emoji-mart 基于 React 的表情库
-* react-highlight-words 基于 React 的关键字高亮
+* emoji-mart 基于 React的表情库
+* react-highlight-words 基于 React的关键字高亮
 * WaterMark 水印组件
+* react-colorful 基于 React的颜色选择器
+* react-copy-write 基于 React的复制粘贴组件
+* react-medium-image-zoom 基于 React的图片放大组件
+* react-fontawesome React应用图标库
+* react i18next 使 React应用支持多语言
+* react-infinite-scroll-component 使 React项目支持无限滚动
+* react-lazy-load 使 React项目支持图片懒加载
+* react-loadable 使 React项目支持代码分割
+* react-contexify 为 React应用带来灵活的右键菜单
+
 
 ## 数据可视化
 * AntV 包含 G2、G6、F2、L7 以及一套完整的图表使用和设计规范, 提供强大的数据可视化需求
@@ -42,12 +52,14 @@ last_update:
 * Viser 支持多种主流框架的可视化库
 * react-gantt-antd 一个漂亮的 React甘特图组件, antd风格
 
-## 拖拽/排序
+## 拖拽 / 排序
 * react-beautiful-dnd 漂亮,可移植性 列表拖拽库
 * react-dnd 可帮助我们构建复杂的拖放界面，同时保持组件的分离
 * react-moveable 支持自由拖拽, 缩放, 参考线的灵活强大的拖拽库
 * react-grid-layout 强大的网格拖拽排序缩放库
 * mixitup 强大且高性能的列表卡片排序动画库
+* react-sortable-hoc 基于 react 的列表拖拽排序库
+* react-split-pane 为 React应用带来灵活的可拖拽面板布局
 
 ## 动画效果
 * Halogen 使用 React 的加载动画集合
@@ -57,10 +69,21 @@ last_update:
 * react-text-loop-next 文字轮播动画
 
 ## 图像处理
-* react-image-crop 强大的图片裁切库
+* react-image-crop 使 React应用轻松实现图片裁剪功能
 * react-sparklines 基于数据自动生成趋势线
 * dom-to-image 基于 dom 生成图片的 canvas 库
 * react-img-editor 支持截图编辑的图片库
+
+## 播放器
+* react-medium-video 基于 React 的视频播放器组件
+* react-player 基于 React 的视频播放器组件
+* react-h5-video-player 基于 React 的 H5 视频播放器组件
+* react-dplayer 基于 React 的 DPlayer 播放器组件
+
+## 文件上传
+* react-dropzone 基于 React 的文件上传组件
+* react-file-pond 基于 React 的文件上传组件
+* react-file-reader 基于 React 的文件读取组件
 
 ## 编辑器相关
 * braft-editor 富文本编辑器
@@ -70,8 +93,27 @@ last_update:
 * GGEditor 可视化图编辑器
 * react-codemirror2 代码编辑器
 * jsoneditor json 编辑器
+* React JSON View 优化 React 应用中的 JSON数据展示
+* React Quill 基于 Quill.js 开发的组件
+* react-ace 基于 ace.js 开发的组件
+* react monaco Editor 基于 monaco-editor 的 React 编辑器
+* react quill 基于 quill 的 React 编辑器
+* react-markdown 在 React应用中渲染 Markdown
 
 ## 地图相关
 * google-map-react 谷歌地图插件
 * react-amap 高德地图插件
 * react-baidu-map 百度地图
+
+## 响应式设计 / 移动端
+* react-responsive 响应式组件
+* react-media 响应式组件
+* react-responsive-carousel 响应式轮播组件
+* react-swipeable-views 响应式滑动组件
+
+<br />
+
+## 参考链接
+
+* [20个惊艳的React组件库, 每一个都值得收藏(上)](https://mp.weixin.qq.com/s/gKTRuWFsqqnCpUeM6kTztw)
+* [20个惊艳的React组件库, 每一个都值得收藏(下)](https://mp.weixin.qq.com/s/IMfK3JzKj0tc8KmO8LnC2A)
