--- a/blog/2023/8/20/index.mdx
+++ b/blog/2023/8/20/index.mdx
@@ -84,7 +84,7 @@ description: 中国五十六个民族的基本概要
 
 ## 南亚语系
 
-![](./img/austroasiatic-languages-map.png)
+![](./img/austroasiatic-languages-map.jpeg)
 
 | 民族      | 语言 | 语种 |
 | --- | --- | --- |
