--- a/docs/react/react-library.mdx
+++ b/docs/react/react-library.mdx
@@ -24,7 +24,7 @@ last_update:
 * Dva 一个基于 redux 和 redux-saga 的数据流方案
 
 ## 工具库
-* react Virtualized 一个能渲染大型列表和表格的 React解决方案
+* react virtualized 一个能渲染大型列表和表格的 React解决方案
 * react-file-viewer React 在线 PDF 预览插件
 * react-copy-to-clipboard 基于 React的复制到剪切板组件
 * qrcode.react 基于 React 的生成二维码的组件
