新增 '本站说明'

--- a/docs/index.mdx
+++ b/docs/index.mdx
@@ -1,9 +1,48 @@
 ---
-title: 介绍
-sidebar_label: 介绍
+title: 本站介绍
+sidebar_label: 本站介绍
 sidebar_position: 1
 last_update:
   author: 哈希肯
 ---
 
-## 笔记内容
+## Docusaurus
+> 静态文档站点生成器
+
+## GitHub Actions
+> 自动化部署
+
+### 在本站的作用
+* 通过 Github Actions实现了自动化部署项目到阿里云
+
+
+## Traefik
+> 反向代理服务
+
+### 在本站的作用
+
+* HTTPS 证书的自动配置，可以通过 Let's Encrypt配置通配符 SSL
+
+* 反向代理功能
+
+* 实现 HTTP/2, 性能优化
+
+
+## Kong
+> API 网关
+
+### 在本站的作用
+
+* API 网关, 负责博客的服务
+
+
+## Algolia
+> 文档搜索引擎
+
+### 在本站的作用
+
+* 全站的文档内容搜索
+
+* 将用户搜索信息汇总, 每周发送到邮箱
+
+
