--- a/docs/plugins-and-libraries/base.mdx
+++ b/docs/plugins-and-libraries/base.mdx
@@ -26,6 +26,7 @@ title: 优秀、无依赖的插件和库
 
 ## 表单表格
 * x-spreadsheet  一个基于 web 的简单易用的表格插件
+* formily 阿里巴巴统一前端表单解决方案
 
 <br />
 
@@ -63,8 +64,7 @@ title: 优秀、无依赖的插件和库
 ## 鼠标 / 键盘相关
 * KeyboardJS  一个在浏览器中使用的库（与 node.js 兼容）.它使开发人员可以轻松设置键绑定和使用组合键来设置复杂的绑定.
 * SortableJS  功能强大的 JavaScript 拖拽库
-
-
+* draggable 一个轻量级、响应式、现代的拖放库
 
 <br />
 
