--- a/docs/react/react-library.mdx
+++ b/docs/react/react-library.mdx
@@ -44,7 +44,6 @@ last_update:
 * react-loadable 使 React项目支持代码分割
 * react-contexify 为 React应用带来灵活的右键菜单
 
-
 ## 数据可视化
 * AntV 包含 G2、G6、F2、L7 以及一套完整的图表使用和设计规范, 提供强大的数据可视化需求
 * G2Plot 基于 G2 封装的开箱即用的可视化组件库
@@ -110,6 +109,12 @@ last_update:
 * react-media 响应式组件
 * react-responsive-carousel 响应式轮播组件
 * react-swipeable-views 响应式滑动组件
+
+## 表单库
+* formik 基于 React 的表单解决方案
+* formily 阿里巴巴统一前端表单解决方案
+* react-hook-form 基于 React 的表单解决方案
+* react-final-form 基于 React 的表单解决方案
 
 <br />
 
